<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:text="@string/app_name" android:layout_height="wrap_content" android:id="@+id/app_name" android:layout_width="wrap_content" android:layout_gravity="center_horizontal"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/lunchOption" android:layout_width="wrap_content" android:text="@string/lunchOption"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/date" android:layout_width="wrap_content" android:text="@string/date" android:focusableInTouchMode="false"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/upvotesString" android:layout_width="wrap_content" android:id="@+id/upvotesString"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/upvotesCount" android:layout_width="wrap_content" android:id="@+id/upvotesCount"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/downVotesString" android:layout_width="wrap_content" android:id="@+id/downvotesString"></TextView>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/downvotesCount" android:text="@string/downvotesCount"></TextView>
</LinearLayout>